[gd_scene load_steps=17 format=3 uid="uid://bb6kdi0va62sg"]

[ext_resource type="Texture2D" uid="uid://pp8a2uy8ep1o" path="res://Assets/art/sprites/Enemigos/DukaLIEN_2.png" id="1_8g4sv"]
[ext_resource type="Script" uid="uid://b44jyob5e48n2" path="res://Scripts/Enemies/enemie_3.gd" id="1_jssh4"]
[ext_resource type="Texture2D" uid="uid://x1q04bdi7yma" path="res://Assets/art/sprites/Enemigos/animacion golpe pollo/1.png" id="2_kt0bo"]
[ext_resource type="Texture2D" uid="uid://bkwhr777vossm" path="res://Assets/art/sprites/Particulas/explosion_1.png" id="3_2lji7"]
[ext_resource type="Texture2D" uid="uid://c7rw3ji73y8rf" path="res://Assets/art/sprites/Enemigos/animacion golpe pollo/2.png" id="3_74s0f"]
[ext_resource type="Texture2D" uid="uid://cmhk6iywvfhqd" path="res://Assets/art/sprites/Enemigos/animacion golpe pollo/3.png" id="4_mcbtj"]
[ext_resource type="Texture2D" uid="uid://duyl7dquawm65" path="res://Assets/art/sprites/Particulas/explosion_2.png" id="4_yb55g"]
[ext_resource type="Texture2D" uid="uid://cxclutw0k851d" path="res://Assets/art/sprites/Particulas/explosion_3.png" id="5_dvsnx"]
[ext_resource type="Texture2D" uid="uid://b1336gtvqli2y" path="res://Assets/art/sprites/Enemigos/animacion golpe pollo/4.png" id="5_tdua5"]
[ext_resource type="Texture2D" uid="uid://cn7o86lwnw2ru" path="res://Assets/art/sprites/Particulas/explosion_4.png" id="6_kt0bo"]
[ext_resource type="Texture2D" uid="uid://bresepnf51cdy" path="res://Assets/art/sprites/Particulas/explosion_5.png" id="7_74s0f"]
[ext_resource type="Texture2D" uid="uid://cwnl465sbrvj3" path="res://Assets/art/sprites/Particulas/explosion_6.png" id="8_mcbtj"]
[ext_resource type="AudioStream" uid="uid://cmp0uxkr0orbl" path="res://Assets/sfx/506326__thevoicesgames__retro-explosion-1.wav" id="9_tdua5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6v7yl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_kt0bo")
}, {
"duration": 1.0,
"texture": ExtResource("3_74s0f")
}, {
"duration": 1.0,
"texture": ExtResource("4_mcbtj")
}, {
"duration": 1.0,
"texture": ExtResource("5_tdua5")
}],
"loop": false,
"name": &"ataque",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_2lji7")
}, {
"duration": 1.0,
"texture": ExtResource("4_yb55g")
}, {
"duration": 1.0,
"texture": ExtResource("5_dvsnx")
}, {
"duration": 1.0,
"texture": ExtResource("6_kt0bo")
}, {
"duration": 1.0,
"texture": ExtResource("7_74s0f")
}, {
"duration": 1.0,
"texture": ExtResource("8_mcbtj")
}],
"loop": true,
"name": &"explosion",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_8g4sv")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o5ftm"]
radius = 33.0
height = 120.0

[sub_resource type="CircleShape2D" id="CircleShape2D_h4qff"]
radius = 85.2878

[node name="enemie_3" type="CharacterBody2D" groups=["enemy_3"]]
script = ExtResource("1_jssh4")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_6v7yl")
animation = &"ataque"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_o5ftm")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_h4qff")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -22.0
offset_top = -112.0
offset_right = 18.0
offset_bottom = -89.0
text = "0"
horizontal_alignment = 1

[node name="ProgressBar_enemy_3" type="ProgressBar" parent="."]
visible = false
offset_left = -68.0
offset_top = -109.0
offset_right = 68.0
offset_bottom = -94.0
value = 100.0
show_percentage = false

[node name="explosion_timer" type="Timer" parent="."]

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_tdua5")
volume_db = 10.0

[node name="Punch_timer" type="Timer" parent="."]

[connection signal="animation_finished" from="Sprite2D" to="." method="_on_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="explosion_timer" to="." method="_on_explosion_timer_timeout"]
[connection signal="timeout" from="Punch_timer" to="." method="_on_punch_timer_timeout"]
